# wgpu-playground

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
src/: main.rs
src/lib/: lib.rs  shader.wgsl
web/: index.html  index.js
